Remove JDK24 warnings